<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. Mark Soft - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/input_layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_registration_category_store_info"
                android:textStyle="bold" />

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/store_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/store_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/store_registration_hint_store_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/store_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/store_registration_hint_store_phone_number"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/store_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/store_registration_hint_store_type" />
                </android.support.design.widget.TextInputLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/map_fragment_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/store_location_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/small_margin"
                        android:text="@string/store_registration_hint_store_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/map_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="H, 2:1"
                        app:layout_constraintTop_toBottomOf="@id/store_location_hint" />
                </android.support.constraint.ConstraintLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/store_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/store_registration_hint_store_address" />
                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/store_registration_category_corporate_info"
                android:textStyle="bold" />

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/corporate_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/corporate_registration_scan_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        app:layout_constraintDimensionRatio="H, 2:1" />
                </android.support.constraint.ConstraintLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/corporate_registration_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/store_registration_hint_store_corporate_registration_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/corporate_registration_owner_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/store_registration_hint_store_corporate_registration_owner_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/corporate_registration_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/store_registration_hint_store_corporate_registration_number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/corporate_registration_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/store_registration_hint_store_corporate_registration_address" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@android:string/cancel"
                    android:textColor="@color/colorTextDark" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@android:string/ok"
                    android:textColor="@color/colorTextDark" />
            </LinearLayout>
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.constraint.ConstraintLayout>